[gd_scene load_steps=10 format=3 uid="uid://ddf3h7p6d0gk1"]

[ext_resource type="Script" uid="uid://cqmsbu57rddg7" path="res://Mision_5/Etapa_1/grafo/scripts/grafo_etapa_1.gd" id="1_yw5bb"]
[ext_resource type="Script" uid="uid://c1m2l6p7ldxyq" path="res://Mision_5/Etapa_1/grafo/scripts/line_layer.gd" id="2_ceugp"]
[ext_resource type="Texture2D" uid="uid://bu2arwn5cb35t" path="res://Mision_5/Etapa_1/grafo/Assets/background.png" id="2_gptue"]
[ext_resource type="Texture2D" uid="uid://d3h7ak2koequy" path="res://Mision_5/Etapa_1/grafo/Assets/box.png" id="3_l5bpb"]
[ext_resource type="Texture2D" uid="uid://peif6igwxwy6" path="res://Mision_5/Etapa_3/grafo/assets/Buttons/Play_1.png" id="5_kogj2"]
[ext_resource type="Texture2D" uid="uid://surxwa3giy7e" path="res://Mision_5/Etapa_3/grafo/assets/Buttons/Play_2.png" id="6_ygyr0"]
[ext_resource type="Texture2D" uid="uid://c1v1rgprapni5" path="res://Mision_5/Etapa_3/grafo/assets/Buttons/Play_3.png" id="7_dqb6h"]
[ext_resource type="Texture2D" uid="uid://bhkgjacb5msbt" path="res://Mision_5/Etapa_3/grafo/assets/Buttons/lupa_1.png" id="8_gc5mf"]
[ext_resource type="Texture2D" uid="uid://dijvswi4bxfg0" path="res://Mision_5/Etapa_3/grafo/assets/Buttons/lupa_2.png" id="9_tdson"]

[node name="Level1" type="Node2D"]
script = ExtResource("1_yw5bb")

[node name="Background" type="TextureRect" parent="."]
z_index = -1
offset_right = 640.0
offset_bottom = 360.0
texture = ExtResource("2_gptue")
expand_mode = 1

[node name="box" type="TextureRect" parent="."]
offset_left = 128.0
offset_top = 33.0
offset_right = 527.0
offset_bottom = 353.0
texture = ExtResource("3_l5bpb")
expand_mode = 1

[node name="Graph" type="Node2D" parent="."]
z_index = 1

[node name="LineLayer" type="Node2D" parent="Graph"]
z_index = 1
script = ExtResource("2_ceugp")

[node name="NodeLayer" type="Node2D" parent="Graph"]
z_index = 2

[node name="UI" type="CanvasLayer" parent="."]

[node name="ButtonStart" type="TextureButton" parent="UI"]
offset_left = 18.0
offset_top = 257.0
offset_right = 120.0
offset_bottom = 290.0
texture_normal = ExtResource("5_kogj2")
texture_pressed = ExtResource("6_ygyr0")
texture_hover = ExtResource("7_dqb6h")

[node name="OptionAlgorithm" type="OptionButton" parent="UI"]
offset_left = 41.0
offset_top = 300.0
offset_right = 103.0
offset_bottom = 331.0
item_count = 2
popup/item_0/text = "BFS"
popup/item_0/id = 0
popup/item_1/text = "DFS"
popup/item_1/id = 1

[node name="LabelStructure" type="Label" parent="UI"]
offset_left = 22.0
offset_top = 539.0
offset_right = 191.0
offset_bottom = 582.0

[node name="LabelStatus" type="Label" parent="UI"]
offset_left = 167.0
offset_top = 8.0
offset_right = 207.0
offset_bottom = 31.0

[node name="HelpButton" type="TextureButton" parent="UI"]
offset_left = 588.0
offset_top = 18.0
offset_right = 628.0
offset_bottom = 58.0
texture_normal = ExtResource("8_gc5mf")
texture_pressed = ExtResource("9_tdson")

[connection signal="pressed" from="UI/HelpButton" to="." method="_on_help_button_pressed"]
